--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
+    "tailwind-styled-components": "^2.1.8",
     "tailwindcss": "^3.1.8",
     "vite": "^3.0.0"
   }
